GL/src/test/deca/context/valid/deca_sans_objet/testNot.deca
// Description:
//    test de not
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 01/01/2026

{
    boolean y = true ;
    y = !y ;
}