GL/src/test/deca/context/invalid/deca_sans_objet/readint.deca
// Description :
// test de déclaration des variables
//
// Resultats :
// Ligne 12: type incompatible pour readint
//
// Historique:
//    cree le 01/01/2026

{
  boolean b;
  b = readInt();
}